# ot-harjoitustyo2021

./: README.md
blackjack_game/: .coverage  pyproject.toml  tasks.py
blackjack_game/src/: Decks.py  check.py  count.py  decks.py  index.py  main.py  start_screen.py
blackjack_game/src/services/: check.py  check_winner.py  deal_cards.py  decks.py  scoreboard.py  win_count.py
blackjack_game/src/tests/: blackjack_test.py
blackjack_game/src/ui/: game_screen.py  index.py  scoreboard.py  show.py  start_screen.py
dokumentaatio/: arkkitehtuuri.md  käyttöohje.md  testausdokumentti.md  työaikakirjanpito.md  vaatimusmäärittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
