[tool.poetry]
name = "blackjack_game"
version = "0.1.0"
description = ""
authors = ["juhani-dev <juhani.kontulainen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^4.0"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
